--- a/ear/pom.xml
+++ b/ear/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <artifactId>was</artifactId>
         <groupId>com.ibm</groupId>
-        <version>2.8-SNAPSHOT</version>
+        <version>2.8.0</version>
 		<relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -28,25 +28,25 @@
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>access</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>authn</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>courier</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>dav</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
@@ -64,85 +64,85 @@
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>library</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>mercury</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject.osp</groupId>
             <artifactId>osp-common-tool</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject.osp</groupId>
             <artifactId>osp-glossary-tool</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject.osp</groupId>
             <artifactId>osp-jsf-example</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject.osp</groupId>
             <artifactId>osp-jsf-resource</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject.osp</groupId>
             <artifactId>osp-matrix-tool</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject.osp</groupId>
             <artifactId>osp-portal-tool</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject.osp</groupId>
             <artifactId>osp-portal</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject.osp</groupId>
             <artifactId>osp-presentation-tool</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject.osp</groupId>
             <artifactId>osp-wizard-tool</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>podcasts</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>portal-render</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>portal</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
@@ -154,37 +154,37 @@
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>sakai-alias-tool</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>sakai-announcement-tool</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>sakai-archive-tool</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>sakai-assignment-tool</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>sakai-authz-tool</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>sakai-axis</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
@@ -196,55 +196,55 @@
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>sakai-calendar-summary-tool</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>sakai-calendar-tool</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>sakai-chat-tool</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>sakai-citations-tool</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>sakai-content-tool</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>sakai-fck-connector</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>sakai-gradebook-testservice</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>sakai-gradebook-tool</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>sakai-help-tool</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
@@ -256,55 +256,55 @@
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>sakai-login-tool</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>sakai-mailarchive-james</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>sakai-mailarchive-tool</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>sakai-memory-tool</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>sakai-message-tool</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject.msgcntr</groupId>
             <artifactId>messageforums-tool</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>sakai-metaobj-tool</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>sakai-news-tool</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>sakai-podcasts</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
@@ -316,13 +316,13 @@
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>sakai-postem-tool</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>sakai-presence-tool</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
@@ -346,37 +346,37 @@
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>sakai-rights-tool</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>sakai-roster-tool</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>sakai-rutgers-linktool</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>sakai-rwiki-tool</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>sakai-sample-tool-jsf</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>sakai-sample-tool-servlet</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
@@ -388,91 +388,91 @@
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>sakai-sections-tool</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>sakai-siteassociation-tool</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject.sitemanage</groupId>
             <artifactId>sakai-site-manage-tool</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject.sitemanage</groupId>
             <artifactId>sakai-site-manage-group-helper</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject.sitemanage</groupId>
             <artifactId>sakai-site-manage-participant-helper</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject.sitemanage</groupId>
             <artifactId>sakai-site-manage-group-section-role-helper</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject.sitemanage</groupId>
             <artifactId>sakai-site-pageorder-helper</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>sakai-site-tool</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>sakai-syllabus-tool</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>sakai-tool-tool-su</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>sakai-user-tool-admin-prefs</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>sakai-user-tool-prefs</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>sakai-user-tool</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>sakai-usermembership-tool</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>sakai-web-tool</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
@@ -484,31 +484,31 @@
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>savecite</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>tool</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>web</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>wiki</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject</groupId>
             <artifactId>xsl-portal</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0</version>
             <type>war</type>
         </dependency>
 
